mejoras api
